--- a/src/components/main/Logo/styles.module.scss
+++ b/src/components/main/Logo/styles.module.scss
@@ -6,4 +6,8 @@
   user-select: none;
   color: white;
   text-decoration: none;
+
+  @include tablet {
+    display: none;
+  }
 }
