--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -27,10 +27,6 @@ body {
     background-size: 600px 600px;
     pointer-events: none;
   }
-
-  * {
-    min-width: 0;
-  }
 }
 
 #app {
